Added ability to get and run multiple files
Added base exception handling

--- a/Rosling/Rosling.ServiceModel/Rosling.ServiceModel.csproj
+++ b/Rosling/Rosling.ServiceModel/Rosling.ServiceModel.csproj
@@ -56,7 +56,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Rosling.Common\Rosling.Common.csproj">
+    <ProjectReference Include="..\Rosling.Common\Rosling.Common.csproj">
       <Project>{3f9f0e17-a17b-4dff-85bb-881d5174eacb}</Project>
       <Name>Rosling.Common</Name>
     </ProjectReference>
