--- a/Rosling/Rosling.ServiceInterface/Rosling.ServiceInterface.csproj
+++ b/Rosling/Rosling.ServiceInterface/Rosling.ServiceInterface.csproj
@@ -81,11 +81,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Rosling.Common\Rosling.Common.csproj">
+    <ProjectReference Include="..\Rosling.Common\Rosling.Common.csproj">
       <Project>{3f9f0e17-a17b-4dff-85bb-881d5174eacb}</Project>
       <Name>Rosling.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\SnippetEngine\Roslng.SnippetEngine.csproj">
+    <ProjectReference Include="..\SnippetEngine\Roslng.SnippetEngine.csproj">
       <Project>{3d312af7-f080-424d-8b30-999b7191e97c}</Project>
       <Name>Roslng.SnippetEngine</Name>
     </ProjectReference>
