--- a/Rosling/Rosling/Rosling.csproj
+++ b/Rosling/Rosling/Rosling.csproj
@@ -146,6 +146,14 @@
     <Content Include="js\rosling.js" />
     <Content Include="js\SStack.js" />
     <Content Include="css\offset.css" />
+    <Content Include="bower_components\handlebars\handlebars.amd.js" />
+    <Content Include="bower_components\handlebars\handlebars.amd.min.js" />
+    <Content Include="bower_components\handlebars\handlebars.js" />
+    <Content Include="bower_components\handlebars\handlebars.min.js" />
+    <Content Include="bower_components\handlebars\handlebars.runtime.amd.js" />
+    <Content Include="bower_components\handlebars\handlebars.runtime.amd.min.js" />
+    <Content Include="bower_components\handlebars\handlebars.runtime.js" />
+    <Content Include="bower_components\handlebars\handlebars.runtime.min.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
