--- a/Rosling/SnippetEngine/Gistlyn.SnippetEngine.csproj
+++ b/Rosling/SnippetEngine/Gistlyn.SnippetEngine.csproj
@@ -75,9 +75,9 @@
     <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Rosling.Common\Rosling.Common.csproj">
+    <ProjectReference Include="..\Rosling.Common\Gistlyn.Common.csproj">
       <Project>{3f9f0e17-a17b-4dff-85bb-881d5174eacb}</Project>
-      <Name>Rosling.Common</Name>
+      <Name>Gistlyn.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
