--- a/Gistlyn/Gistlyn.SnippetEngine/Gistlyn.SnippetEngine.csproj
+++ b/Gistlyn/Gistlyn.SnippetEngine/Gistlyn.SnippetEngine.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptRunner.cs" />
+    <Compile Include="GistSourceResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
