--- a/Gistlyn/Gistlyn/Web.config
+++ b/Gistlyn/Gistlyn/Web.config
@@ -43,6 +43,7 @@
   </system.webServer>
   <appSettings>
     <add key="webPages:Enabled" value="false" />
+    <add key="NugetPackagesDirectory" value="packages" />
   </appSettings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc" />
