--- a/Gistlyn/Gistlyn.Common/Gistlyn.Common.csproj
+++ b/Gistlyn/Gistlyn.Common/Gistlyn.Common.csproj
@@ -38,12 +38,20 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="ServiceStack.Interfaces">
+      <HintPath>..\..\packages\ServiceStack.Interfaces.4.0.54\lib\portable-wp80+sl5+net40+win8+monotouch+monoandroid+xamarin.ios10\ServiceStack.Interfaces.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Objects\ErrorInfo.cs" />
     <Compile Include="Objects\ScriptExecutionResult.cs" />
     <Compile Include="Objects\VariableInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Objects\NugetPackageInfo.cs" />
+    <Compile Include="Objects\WebHostConfig.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
