--- a/Gistlyn/Gistlyn.ServiceInterface/packages.config
+++ b/Gistlyn/Gistlyn.ServiceInterface/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net46" />
+  <package id="Mono.NuGet.Core" version="2.8.7" targetFramework="net46" />
   <package id="ServiceStack" version="4.0.54" targetFramework="net45" />
   <package id="ServiceStack.Client" version="4.0.54" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.54" targetFramework="net45" />
