added base skeleton for adding references
The references package will be added with all package dependencies.

--- a/Gistlyn/Gistlyn.Common/Gistlyn.Common.csproj
+++ b/Gistlyn/Gistlyn.Common/Gistlyn.Common.csproj
@@ -49,9 +49,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\NugetPackageInfo.cs" />
     <Compile Include="Objects\WebHostConfig.cs" />
+    <Compile Include="Objects\AssemblyReference.cs" />
+    <Compile Include="Interfaces\IDataContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
