--- a/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
+++ b/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
@@ -51,6 +51,7 @@
     <Compile Include="RunMultipleScripts.cs" />
     <Compile Include="SearchNugetPackage.cs" />
     <Compile Include="InstallNugetPackage.cs" />
+    <Compile Include="AddPackageAsReference.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Types\" />
