--- a/Gistlyn/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
+++ b/Gistlyn/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunScriptService.cs" />
     <Compile Include="NugetService.cs" />
+    <Compile Include="NugetHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
