--- a/Gistlyn/Gistlyn/Gistlyn.csproj
+++ b/Gistlyn/Gistlyn/Gistlyn.csproj
@@ -117,6 +117,10 @@
       <Project>{3D312AF7-F080-424D-8B30-999B7191E97C}</Project>
       <Name>Gistlyn.SnippetEngine</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Gistlyn.DataContext\Gistlyn.DataContext.csproj">
+      <Project>{4DABAD65-4B94-4FD4-B8A9-9D0C1265CDB6}</Project>
+      <Name>Gistlyn.DataContext</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
