--- a/Gistlyn/Gistlyn/Web.config
+++ b/Gistlyn/Gistlyn/Web.config
@@ -44,6 +44,7 @@
   <appSettings>
     <add key="webPages:Enabled" value="false" />
     <add key="NugetPackagesDirectory" value="packages" />
+    <add key="ConnectionString" value="Data Source=db/packages.db;Version=3;" />
   </appSettings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc" />
