Added package as reference feature

--- a/Gistlyn/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
+++ b/Gistlyn/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
@@ -69,6 +69,7 @@
     <Reference Include="ServiceStack.Server">
       <HintPath>..\..\packages\ServiceStack.Server.4.0.56\lib\net45\ServiceStack.Server.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyServices.cs" />
