--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="../Gistlyn.DataContext/packages.config" />
   <repository path="../Gistlyn/Gistlyn.Common/packages.config" />
+  <repository path="../Gistlyn/Gistlyn.DataContext/packages.config" />
   <repository path="../Gistlyn/Gistlyn.ServiceInterface/packages.config" />
   <repository path="../Gistlyn/Gistlyn.ServiceModel/packages.config" />
   <repository path="../Gistlyn/Gistlyn.SnippetEngine/packages.config" />
