Added processing packages.config files

--- a/Gistlyn/Gistlyn.Common/Gistlyn.Common.csproj
+++ b/Gistlyn/Gistlyn.Common/Gistlyn.Common.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Objects\WebHostConfig.cs" />
     <Compile Include="Objects\AssemblyReference.cs" />
     <Compile Include="Interfaces\IDataContext.cs" />
+    <Compile Include="Objects\PackageCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
