Added server events
Added base for server events supscriptions
Added AppDomain distinguishing for running scripts to support console on-line
publishing for long-running tasks.

--- a/Gistlyn/Gistlyn.Common/Gistlyn.Common.csproj
+++ b/Gistlyn/Gistlyn.Common/Gistlyn.Common.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Objects\AssemblyReference.cs" />
     <Compile Include="Interfaces\IDataContext.cs" />
     <Compile Include="Objects\PackageCollection.cs" />
+    <Compile Include="Objects\ConsoleMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
