--- a/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
+++ b/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
@@ -52,6 +52,7 @@
     <Compile Include="InstallNugetPackage.cs" />
     <Compile Include="AddPackageAsReference.cs" />
     <Compile Include="SearchInstalledPackages.cs" />
+    <Compile Include="GetScriptVariables.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Types\" />
