--- a/Gistlyn/Gistlyn.SnippetEngine/Gistlyn.SnippetEngine.csproj
+++ b/Gistlyn/Gistlyn.SnippetEngine/Gistlyn.SnippetEngine.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\..\packages\ServiceStack.Text.4.0.56\lib\net40\ServiceStack.Text.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
