--- a/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
+++ b/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AddPackageAsReference.cs" />
     <Compile Include="SearchInstalledPackages.cs" />
     <Compile Include="GetScriptVariables.cs" />
+    <Compile Include="GetScriptVariableJson.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Types\" />
