Added cancelling running scripts

--- a/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
+++ b/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
@@ -54,6 +54,7 @@
     <Compile Include="SearchInstalledPackages.cs" />
     <Compile Include="GetScriptVariables.cs" />
     <Compile Include="GetScriptVariableJson.cs" />
+    <Compile Include="CancelScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Types\" />
