Added cancelling already running scripts

--- a/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
+++ b/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
@@ -55,6 +55,7 @@
     <Compile Include="GetScriptVariables.cs" />
     <Compile Include="GetScriptVariableJson.cs" />
     <Compile Include="CancelScript.cs" />
+    <Compile Include="GetScriptStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Types\" />
