Added evaluating expressions after script execution

--- a/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
+++ b/Gistlyn/Gistlyn.ServiceModel/Gistlyn.ServiceModel.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GetScriptVariableJson.cs" />
     <Compile Include="CancelScript.cs" />
     <Compile Include="GetScriptStatus.cs" />
+    <Compile Include="EvaluateExpression.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Types\" />
