Fixed exception on script code with angle brackets

--- a/Gistlyn/Gistlyn/Web.config
+++ b/Gistlyn/Gistlyn/Web.config
@@ -27,11 +27,11 @@
         <add assembly="System.Net, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" requestValidationMode="2.0" />
     <httpHandlers>
       <add path="servicestack*" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*" />
     </httpHandlers>
-    <pages controlRenderingCompatibilityVersion="4.0" />
+    <pages controlRenderingCompatibilityVersion="4.0" validateRequest="false" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
