Changed script status while runing/cancelled

--- a/Gistlyn/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
+++ b/Gistlyn/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
@@ -85,7 +85,7 @@
     <Compile Include="DomainWrapper.cs" />
     <Compile Include="NotifierProxy.cs" />
     <Compile Include="Auth\ScriptRunnerInfo.cs" />
-    <Compile Include="ScriptService.cs" />
+    <Compile Include="IncludeJsScriptService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
