Clean up source code to follow R# + SS conventions

--- a/src/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
+++ b/src/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{801A0F89-D5F6-49A6-BCEA-6624388C98A4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gistlyn.ServiceInterfaces</RootNamespace>
-    <AssemblyName>Gistlyn.ServiceInterfaces</AssemblyName>
+    <RootNamespace>Gistlyn.ServiceInterface</RootNamespace>
+    <AssemblyName>Gistlyn.ServiceInterface</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -104,9 +104,7 @@
       <Name>Gistlyn.ServiceModel</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Auth\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
