--- a/src/Gistlyn.TestHost/Web.config
+++ b/src/Gistlyn.TestHost/Web.config
@@ -43,8 +43,8 @@
   </system.webServer>
   <appSettings>
     <add key="webPages:Enabled" value="false" />
-    <add key="NugetPackagesDirectory" value="packages" />
-    <add key="ConnectionString" value="Data Source=db/packages.db;Version=3;" />
+    <!--<add key="NugetPackagesDirectory" value="packages" />
+    <add key="ConnectionString" value="Data Source=db/packages.db;Version=3;" />-->
   </appSettings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc" />
