--- a/src/Gistlyn.Common/Gistlyn.Common.csproj
+++ b/src/Gistlyn.Common/Gistlyn.Common.csproj
@@ -57,7 +57,6 @@
     <Compile Include="Objects\VariableInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\NugetPackageInfo.cs" />
-    <Compile Include="Objects\WebHostConfig.cs" />
     <Compile Include="Objects\AssemblyReference.cs" />
     <Compile Include="Interfaces\IDataContext.cs" />
     <Compile Include="Objects\PackageCollection.cs" />
@@ -70,9 +69,7 @@
     <Compile Include="Objects\MemoizedResultsContainer.cs" />
     <Compile Include="Objects\JsIncludedScriptExecutionResult.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
