--- a/src/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
+++ b/src/Gistlyn.ServiceInterface/Gistlyn.ServiceInterface.csproj
@@ -78,8 +78,7 @@
     <Compile Include="NugetService.cs" />
     <Compile Include="NugetHelper.cs" />
     <Compile Include="FrameworkTargetableAssembly.cs" />
-    <Compile Include="Auth\UserSession.cs" />
-    <Compile Include="Auth\CustomUserSession.cs" />
+    <Compile Include="CacheExtensions.cs" />
     <Compile Include="Auth\EmptyAuthProvider.cs" />
     <Compile Include="ConsoleWriter.cs" />
     <Compile Include="DomainWrapper.cs" />
