--- a/src/Gistlyn/package.json
+++ b/src/Gistlyn/package.json
@@ -8,9 +8,11 @@
     "registry": "npm",
     "dependencies": {
       "bootstrap": "~3.2.0",
+      "codemirror": "^5.16.0",
       "es6-shim": "github:es-shims/es6-shim@^0.35.0",
       "jquery": "^2.2.2",
       "react": "^15.0.1",
+      "react-codemirror": "^0.2.6",
       "react-dom": "^15.0.1",
       "ss-utils": "^0.1.3"
     },
